Changed name on about

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
         <p class="font-semibold text-xl mb-2">I am 26 years old and study frontend-development</p>  
         <div class="flex font-medium items-start mt-5">
           
-          <p id="skills" class=" me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Skills</p>
-          <p id="experience" class="me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Experience</p>
-          <p id="education" class="me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Education</p>
+          <p id="expertise" class=" me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Expertise</p>
+          <p id="experience" class="me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Development experience</p>
+          <p id="qualifications" class="me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Qualifications</p>
         </div>
-        <div id="skills-list" class="absolute hidden py-2 px-4 mt-2">
+        <div id="expertise-list" class="absolute hidden py-2 px-4 mt-2">
           <ul> 
             <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">Course done</span> <br>HTML</li>
             <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">Course done</span> <br>CSS</li>
@@ -170,7 +170,7 @@
         </div>
         
         <!-- Lista med utbildning -->
-        <div id="education-list" class="absolute hidden py-2 px-4 mt-2">
+        <div id="qualifications-list" class="absolute hidden py-2 px-4 mt-2">
           <ul>
             <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">2013-2017</span> <br>RIG Snowboardgymnasiet, Malung</li>
             <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">2020-2020</span> <br>Webdevelopment 1, Luleå Tekniska Universitet</li>
