--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
         <p class="font-semibold text-xl mb-2">I am 26 years old and study frontend-development</p>  
         <div class="flex font-medium items-start mt-5">
           
-          <p id="expertise" class=" me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Expertise</p>
-          <p id="experience" class="me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Development experience</p>
-          <p id="qualifications" class="me-4 hover:text-gray-700 hover:underline hover:decoration-4 underline-offset-4 text-gray-900">Qualifications</p>
+          <p id="expertise" class=" me-4 hover:text-gray-900 hover:underline hover:decoration-4 underline-offset-4 text-gray-700">Expertise</p>
+          <p id="experience" class="me-4 hover:text-gray-900 hover:underline hover:decoration-4 underline-offset-4 text-gray-700">Development experience</p>
+          <p id="qualifications" class="me-4 hover:text-gray-900 hover:underline hover:decoration-4 underline-offset-4 text-gray-700">Qualifications</p>
         </div>
         <div id="expertise-list" class="absolute hidden py-2 px-4 mt-2">
           <ul> 
@@ -182,7 +182,7 @@
           <ul>
             <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">2013-2017</span> <br>RIG Snowboardgymnasiet, Malung</li>
             <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">2020-2020</span> <br>Webdevelopment 1, Luleå Tekniska Universitet</li>
-            <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">Current</span> <br>Frontend-development, EC Utbildningar</li>
+            <li class="mt-2 font-semibold text-medium"><span class="font-semibold text-gray-700">2023-Current</span> <br>Frontend-development, EC Utbildningar</li>
           </ul>
         </div>
         </div>
