Buttons positiond centered

--- a/index.html
+++ b/index.html
@@ -190,21 +190,24 @@
         </div>
 
   </section>
+
   <section id="projects" class="bg-black h-screen">
+
     <div class="max-w-screen-xl h-auto flex flex-wrap items-center justify-between mx-auto p-4">
       <p class="self-center text-2xl font-semibold whitespace-nowrap text-white">Projects</p>
     </div>
     
-    <!-- Centered button -->
-    <div class="flex justify-center items-center">
-      <button class="animate-rainbow px-12 py-8 font-bold text-white rounded-full border-4 border-blue-500 bg-gradient-to-r from-blue-500 via-green-500 to-pink-500 hover:bg-yellow-400 hover:border-yellow-600 transform transition-transform duration-200 ease-in-out hover:scale-110">
+   
+    <div class="flex justify-center items-center h-4/5 mr-10 ml-10">
+      <button class="mr-10 animate-rainbow px-12 py-8 font-bold text-white rounded-full border-4 border-blue-500 bg-gradient-to-r from-blue-500 via-green-500 to-pink-500 hover:bg-yellow-400 hover:border-yellow-600 transform transition-transform duration-200 ease-in-out hover:scale-110">
         Play Games
       </button>
         
-      <button class="inline-block py-6 px-12 bg-amber-500 text-white font-semibold rounded-lg shadow-md transform transition duration-300 ease-in-out hover:scale-105 hover:bg-amber-600 hover:text-gray-100">
+      <button class="ml-10 inline-block py-6 px-12 bg-amber-500 text-white font-semibold rounded-lg shadow-md transform transition duration-300 ease-in-out hover:scale-105 hover:bg-amber-600 hover:text-gray-100">
         View Projects
       </button>
     </div>
+
   </section>
   
   
