--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Vite App</title>
 </head>
 
-<body class="box-border">
+<body class="box-border bg-pink-400">
   <button id="scroll-button" class="hidden fixed bottom-20 right-10 z-50 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" title="Go to top">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"></path>
