--- a/index.html
+++ b/index.html
@@ -219,9 +219,11 @@
     
    
     <div class="flex justify-center items-center h-4/5 mr-10 ml-10">
+     <a href="https://stenemur.github.io/arcade-start-site/" target="_blank">
       <button class="mr-10 animate-rainbow px-12 py-8 font-bold text-white rounded-full border-4 border-blue-500 bg-gradient-to-r from-blue-500 via-green-500 to-pink-500 hover:bg-yellow-400 hover:border-yellow-600 transform transition-transform duration-200 ease-in-out hover:scale-110">
         Play Games
       </button>
+    </a>
         
       <button class="ml-10 inline-block py-6 px-12 bg-amber-500 text-white font-semibold rounded-lg shadow-md transform transition duration-300 ease-in-out hover:scale-105 hover:bg-amber-600 hover:text-gray-100">
         View Projects
