home page responsive

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
       </svg>
     </button>
-    <div class="hidden w-full" id="navbar-hamburger">
-      <ul class="flex flex-col items-center font-medium mt-4 pb-3 rounded-lg bg-transparent dark:bg-gray-800 shadow-xl">
+    <div class="hidden w-full z-50 absolute top-11 right-0" id="navbar-hamburger">
+      <ul class="flex flex-col items-center font-medium mt-4 pb-3 rounded-lg bg-amber-500 dark:bg-gray-800 shadow-xl">
         <li class="relative group">
           <a href="#home"
             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:border-0 md:hover:text-gray-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
@@ -182,10 +182,10 @@
       <div class="flex justify-center items-center flex-col h-full mr-2">
         <h2 class="font-semibold text-5xl mb-2">Hi!</h2>
         <p class="font-semibold text-3xl mb-2">Welcome to my portfolio</p>
-        <p class="text-xl xl:ml-2">I am Estelle Stenemur a frontend-developer student</p>
+        <p class="text-xl ml-2">I am Estelle Stenemur a frontend-developer student</p>
       </div>
-      <div class=" my-0 md:my-10 md:mr-10 mx-px md:max-w-md md:h-full justify-center">
-        <img src="/Profilbild.jpg" alt="profile picture" class="rounded-full mx-auto sm:max-w-md md:max-w-full">
+      <div class=" my-0 md:my-10 md:mr-10 mx-px md:max-w-md h-full justify-center">
+        <img src="/Profilbild.jpg" alt="profile picture" class="rounded-full mx-auto max-w-xs sm:max-w-md md:max-w-full">
       </div>
     </div>
     
