--- a/index.html
+++ b/index.html
@@ -193,17 +193,17 @@
     
     
   </header>
-  <section id="about" class="bg-green-500 h-screen">
+  <section id="about" class="bg-green-500 sm:h-screen md:h-screen lg:h-screen">
     <div class="max-w-screen-xl h-auto flex flex-wrap items-center justify-between mx-auto p-4">
 
       <p class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">About</p>
     </div>
-    <div class="grid grid-cols-2">
-      <div class="">
-        <img src="./public/Profilbild.jpg" alt="profile picture" class="max-w-md rounded-full my-10 ml-10">
+    <div class="grid gap-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1">
+      <div class=" my-0 md:my-10 md:mr-10 mx-px md:max-w-md h-full justify-center">
+        <img src="/Profilbild.jpg" alt="profile picture" class="rounded-full mx-auto max-w-xs sm:max-w-md md:max-w-full">
       </div>
 
-      <div class="flex justify-center items-start flex-col h-full">
+      <div class="flex justify-center items-center flex-col h-full mr-2">
         <h2 class="font-semibold text-5xl mb-3">About me</h2>
         <div class="relative">
         <p class="font-semibold text-2xl mb-2">I am 26 years old and study frontend-development</p>  
@@ -251,6 +251,7 @@
         </div>
         </div>
         </div>
+        <div class="block xl:hidden h-60"></div>
 
   </section>
 
