hamburger navbar is now working correctly

--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
     <div class="hidden w-full z-50 absolute top-11 right-0" id="navbar-hamburger">
       <ul class="flex flex-col items-center font-medium mt-4 pb-3 rounded-lg bg-amber-500 dark:bg-gray-800 shadow-xl">
         <li class="relative group">
-          <a href="#home"
+          <a href="#hamburger-home"
             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:border-0 md:hover:text-gray-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             aria-current="page">Home</a>
             <span class="absolute -bottom-1 left-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
             <span class="absolute -bottom-1 right-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
         </li>
         <li class="relative group">
-          <a href="#about"
+          <a href="#hamburger-about"
             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:border-0 md:hover:text-gray-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >About</a>
             <span class="absolute -bottom-1 left-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
             <span class="absolute -bottom-1 right-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
         </li>
         <li class="relative group">
-          <a href="#projects"
+          <a href="#hamburger-projects"
             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:border-0 md:hover:text-gray-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Projects</a>
             <span class="absolute -bottom-1 left-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
             <span class="absolute -bottom-1 right-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
         </li>
         <li class="relative group">
-          <a href="#contact"
+          <a href="#hamburger-contact"
             class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:border-0 md:hover:text-gray-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Contact</a>
             <span class="absolute -bottom-1 left-1/2 w-0 h-1 bg-gray-700 group-hover:w-1/2 group-hover:transition-all duration-500"></span>
